[package]
name = "aur-depends"
version = "0.12.0"
authors = ["morganamilo <m?organamilo@gmail.com>"]
edition = "2018"

description = "A libary for resolving aur dependencies"
homepage = "http://github.com/Morganamilo/aur-depends"
repository = "http://github.com/Morganamilo/aur-depends"
documentation = "https://docs.rs/aur_depends"
license = "GPL-3.0"
keywords = ["archlinux", "pkgbuild", "arch", "aur"]
exclude = ["tests"]

[dependencies]
alpm = "1.1.0"
alpm-utils = "0.6.0"
log = "0.4.11"
raur = { version = "5.0.0", git = "https://gitlab.com/davidbittner/raur" }
bitflags = "1.2.1"

[dev-dependencies]
async-trait = "0.1.41"
simplelog = "0.9.0"
tokio = { version = "1.0.1", features = ["macros"]}

[features]
git = ["alpm/git", "alpm-utils/git"]
rustls = ["raur/rustls"]
default = ["raur/default"]
